# AdventOfCode2024

./: .gitignore  Cargo.toml  devenv.nix
src/: day1.rs  day2.rs  lib.rs  main.rs
